添加维保人员入驻

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -11,8 +11,9 @@
     <div class="weui-toptips weui-toptips_warn js_tooltips">错误提示</div>
 
     <div class="container" id="container"></div>
-
     <link rel="import" href="./fragment/home.html">
+    <link rel="import" href="./fragment/community.html">
+    <link rel="import" href="./fragment/repair.html">
     <link rel="import" href="./fragment/button.html">
     <link rel="import" href="./fragment/list.html">
     <link rel="import" href="./fragment/input.html">
@@ -40,6 +41,7 @@
     <link rel="import" href="./fragment/grid.html">
     <link rel="import" href="./fragment/badge.html">
     <link rel="import" href="./fragment/slider.html">
+    
     <script src="./zepto.min.js"></script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="https://res.wx.qq.com/open/libs/weuijs/1.0.0/weui.min.js"></script>
