--- a/src/example/fragment/home.html
+++ b/src/example/fragment/home.html
@@ -1,258 +1,115 @@
 <div class="page">
     <div class="page__hd">
         <h1 class="page__title">
-            <img src="./images/logo.png" alt="WeUI" height="21px" />
+            <img src="./images/logo.png" alt="维保人员入驻" height="21px" />
         </h1>
-        <p class="page__desc">WeUI 是一套同微信原生视觉体验一致的基础样式库，由微信官方设计团队为微信内网页和微信小程序量身设计，令用户的使用感知更加统一。</p>
+        <p class="page__desc">维保员根据维护计划巡检用微信扫码签到，如设备或场景有问题，通过微信报修。管理员可以通过微信端查看巡检记录消息。</p>
     </div>
-    <div class="page__bd page__bd_spacing">
-        <ul>
-            <li>
-                <div class="weui-flex js_category">
-                    <p class="weui-flex__item">表单</p>
-                    <img src="./images/icon_nav_form.png" alt="">
+    <div class="page__bd">
+        <div class="weui-cells weui-cells_form">
+            <div class="weui-cell weui-cell_vcode">
+                <div class="weui-cell__hd">
+                    <label class="weui-label">手机号</label>
                 </div>
-                <div class="page__category js_categoryInner">
-                    <div class="weui-cells page__category-content">
-                        <a class="weui-cell weui-cell_access js_item" data-id="button" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Button</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="input" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Input</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="list" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>List</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="slider" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Slider</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="uploader" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Uploader</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                    </div>
+                <div class="weui-cell__bd">
+                    <input class="weui-input" type="tel" id="tel" placeholder="请输入手机号" />
                 </div>
-            </li>
-            <li>
-                <div class="weui-flex js_category">
-                    <p class="weui-flex__item">基础组件</p>
-                    <img src="./images/icon_nav_layout.png" alt="">
+                <div class="weui-cell__ft">
+                    <button class="weui-vcode-btn">获取验证码</button>
                 </div>
-                <div class="page__category js_categoryInner">
-                    <div class="weui-cells page__category-content">
-                        <a class="weui-cell weui-cell_access js_item" data-id="article" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Article</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="badge" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Badge</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="flex" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Flex</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="footer" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Footer</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="gallery" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Gallery</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="grid" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Grid</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="icons" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Icons</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="loadmore" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Loadmore</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="panel" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Panel</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="preview" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Preview</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="progress" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Progress</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                    </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__hd">
+                    <label class="weui-label">验证码</label>
                 </div>
-            </li>
-            <li>
-                <div class="weui-flex js_category">
-                    <p class="weui-flex__item">操作反馈</p>
-                    <img src="./images/icon_nav_feedback.png" alt="">
+                <div class="weui-cell__bd">
+                    <input class="weui-input" type="number" id='number' placeholder="请输入验证码" />
                 </div>
-                <div class="page__category js_categoryInner">
-                    <div class="weui-cells page__category-content">
-                        <a class="weui-cell weui-cell_access js_item" data-id="actionsheet" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Actionsheet</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="dialog" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Dialog</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="msg" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Msg</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="picker" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Picker</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="toast" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Toast</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="weui-flex js_category">
-                    <p class="weui-flex__item">导航相关</p>
-                    <img src="./images/icon_nav_nav.png" alt="">
-                </div>
-                <div class="page__category js_categoryInner">
-                    <div class="weui-cells page__category-content">
-                        <a class="weui-cell weui-cell_access js_item" data-id="navbar" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Navbar</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                        <a class="weui-cell weui-cell_access js_item" data-id="tabbar" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Tabbar</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="weui-flex js_category">
-                    <p class="weui-flex__item">搜索相关</p>
-                    <img src="./images/icon_nav_search.png" alt="">
-                </div>
-                <div class="page__category js_categoryInner">
-                    <div class="weui-cells page__category-content">
-                        <a class="weui-cell weui-cell_access js_item" data-id="searchbar" href="javascript:;">
-                            <div class="weui-cell__bd">
-                                <p>Search Bar</p>
-                            </div>
-                            <div class="weui-cell__ft"></div>
-                        </a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="weui-flex js_item" data-id="layers">
-                    <p class="weui-flex__item">层级规范</p>
-                    <img src="./images/icon_nav_z-index.png" alt="">
-                </div>
-            </li>
-        </ul>
+
+            </div>
+        </div>
+        <div class="weui-btn-area">
+            <a class="weui-btn weui-btn_primary " data-id="community" href="javascript:" id="showTooltips">确定</a>
+        </div>
+
+        <div id="toast" style="display: none;">
+            <div class="weui-mask_transparent"></div>
+            <div class="weui-toast">
+                <i class="weui-icon-success-no-circle weui-icon_toast"></i>
+                <p class="weui-toast__content" id="toast_content_text">操作成功</p>
+            </div>
+        </div>
+        <div id="loadingToast" style="display:none;">
+            <div class="weui-mask_transparent"></div>
+            <div class="weui-toast">
+                <i class="weui-loading weui-icon_toast"></i>
+                <p class="weui-toast__content">数据加载中</p>
+            </div>
+        </div>
     </div>
     <div class="page__ft">
-        <a href="javascript:home()"><img src="./images/icon_footer.png" /></a>
+        <a href="javascript:home()">
+            <img src="./images/icon_footer.png" />
+        </a>
     </div>
+
 </div>
+
 <script type="text/javascript">
-    $(function(){
+    var codeId = 0;
+    var phoneNumber;
+    $(function () {
         var winH = $(window).height();
         var categorySpace = 10;
-
-        $('.js_item').on('click', function(){
-            var id = $(this).data('id');
-            window.pageManager.go(id);
-        });
-        $('.js_category').on('click', function(){
-            var $this = $(this),
-                $inner = $this.next('.js_categoryInner'),
-                $page = $this.parents('.page'),
-                $parent = $(this).parent('li');
-            var innerH = $inner.data('height');
-            bear = $page;
-
-            if(!innerH){
-                $inner.css('height', 'auto');
-                innerH = $inner.height();
-                $inner.removeAttr('style');
-                $inner.data('height', innerH);
-            }
-
-            if($parent.hasClass('js_show')){
-                $parent.removeClass('js_show');
-            }else{
-                $parent.siblings().removeClass('js_show');
-
-                $parent.addClass('js_show');
-                if(this.offsetTop + this.offsetHeight + innerH > $page.scrollTop() + winH){
-                    var scrollTop = this.offsetTop + this.offsetHeight + innerH - winH + categorySpace;
-
-                    if(scrollTop > this.offsetTop){
-                        scrollTop = this.offsetTop - categorySpace;
-                    }
-
-                    $page.scrollTop(scrollTop);
-                }
-            }
-        });
     });
+
+    //跳转页面
+    $('.js_item').on('click', function () {
+        var id = $(this).data('id');
+        window.pageManager.go(id);
+    });
+
+    //发送短信
+    $('.weui-vcode-btn').on('click', function () {
+        var tel = $('#tel').val();
+        var $toast = $('#toast');
+        $('#toast_content_text').text('操作成功');
+        $toast.fadeIn(100);
+        setTimeout(function () {
+            $toast.fadeOut(100);
+        }, 2000);
+        $.post(`https://www.airtu.me/AllWeb/APIS/CommunityUser/Send/Send?phoneNumber=${tel}`, function (data, state) {
+            codeId = data.Data.id;
+            console.log(codeId);
+        })
+    })
+
+
+    //验证短信
+    $('#showTooltips').on('click', function () {
+        var tel = $('#tel').val();
+        var code = $('#number').val();
+        var $toast = $('#toast');
+        var $loadingToast = $('#loadingToast');
+        $loadingToast.fadeIn(100);
+        var id = $(this).data('id');
+        $.post(`https://www.airtu.me/AllWeb/APIS/CommunityUser/Send/Code?id=${codeId}&phoneNumber=${tel}&vCode=${code}`, function (data, state) {
+            var resultCode = data.Code;
+            if (resultCode == '200') {
+                $('#toast_content_text').text('验证成功');
+            } else {
+                $('#toast_content_text').text('验证失败');
+            }
+
+            setTimeout(function () {
+                $loadingToast.fadeOut(100);
+                $toast.fadeIn(100);
+                setTimeout(function () {
+                    $toast.fadeOut(100);
+                    phoneNumber=tel;
+                    if(resultCode=='200') window.pageManager.go(id);
+                }, 2000);
+            }, 2000);
+        })
+    })
 </script>
